Fix (Homepage): Whatsapp button z-index.

--- a/src/common/pages/Homepage/Carousel/Carousel.module.sass
+++ b/src/common/pages/Homepage/Carousel/Carousel.module.sass
@@ -75,11 +75,11 @@
         width: 100%
         justify-content: space-around
         gap: 10px
-        padding: 60px
+        padding-inline: 130px
 
         position: absolute
         top: unset
-        bottom: -8%
+        bottom: 5%
         left: 50%
         transform: translateX(-50%)
 
