--- a/src/common/pages/Homepage/Homepage.module.sass
+++ b/src/common/pages/Homepage/Homepage.module.sass
@@ -21,6 +21,7 @@
     align-items: center
     flex-wrap: nowrap
     justify-content: center
+    z-index: 2
 
     width: 100%
     height: 70px
